--- a/trabson/TrabalhoProg3/bin/.gitignore
+++ b/trabson/TrabalhoProg3/bin/.gitignore
@@ -1,19 +1,1 @@
-/Anais.class
-/Artjr.class
-/Artpe.class
-/Instituicao.class
-/LeitorDeArquivo.class
-/Livro.class
-/Outro.class
-/Partitura.class
-/Ppg.class
-/Ppg_Instituicao.class
-/TipoProducao.class
-/TrabalhoProg3.class
-/Traducao.class
-/ComparadorIdade.class
-/T1_2019_1_Etapa01.class
-/Saida.class
-/T1_2019_1_Etapa02.class
-/src.zip
-/Main.class
+/ComparadorNome.class
