trabalho pronto e aceito pelo BOCA

--- a/trabson/TrabalhoProg3/bin/.gitignore
+++ b/trabson/TrabalhoProg3/bin/.gitignore
@@ -1,1 +1,7 @@
 /ComparadorNome.class
+/T1_2019_1_Etapa01.class
+/T1_2019_1_Etapa02.class
+/T1_2019_1_Etapa03.class
+/T1_2019_1_Etapa04.class
+/T1_2019_1_Etapa05.class
+/src.zip
